# mecab-function

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serverless.yml  tox.ini
terraform/: main.tf  output.tf  variables.tf
