[tool.poetry]
name = "mecab-function"
version = "0.1.0"
description = ""
authors = ["YABATANIEN, Murichaduke <mail@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mecab-python3 = "~=1.0.0"
unidic-lite = "~=1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
